add user and user address model and migration

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:u5w7uYedgUaSXE8n95ubWZU65PsreNGcSfYn09XdV+Q=
 APP_DEBUG=true
 APP_URL=http://localhost
 
