--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "biscolab/laravel-recaptcha": "^5.3",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jorenvanhocht/laravel-share": "^4.2",
         "laravel/framework": "^8.12",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.2"
+        "laravel/ui": "^3.2",
+        "socialiteproviders/google": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
