--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
+        "livewire/livewire": "^2.10",
         "socialiteproviders/google": "^4.1"
     },
     "require-dev": {
