add login and updat .env

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,14 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+RECAPTCHA_SITE_KEY=6LcOVDAfAAAAACXSW9GuSQL8woYKHL4bJVQakK3U
+RECAPTCHA_SECRET_KEY=6LcOVDAfAAAAAHDIYd2pZAndrZPFSsPtpWvsCcNO
+RECAPTCHA_SKIP_IP=<YOUR_IP_LIST>
+
+
+GOOGLE_CLIENT_ID="676898068532-fcfs6dbh2dn9aq106cun11l5t6u5vtg8.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CLIENT_REDIERECT="http://localhost:8000/auth/google/Callback"
+
