add laratryst  package

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "livewire/livewire": "^2.10",
+        "santigarcor/laratrust": "^7.1",
         "socialiteproviders/google": "^4.1"
     },
     "require-dev": {
